--- a/gaming-app/public/index.html
+++ b/gaming-app/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Gaming Web Shop</title>
   </head>
   <body>
