--- a/gaming-app/public/index.html
+++ b/gaming-app/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/images/Home/logo.png">
     <title>Gaming Web Shop</title>
   </head>
   <body>
